# stock-prediction-ml

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  universe_config.yaml
data/audit/: ACN_features.csv  ACN_target.csv  analyze_model__ACN_coef_df.csv  (+79 more)
database/: database_manager.py  enhanced_stock_data.db  model_db_manager.py  schema.sql  setup_database.py
models/: enhanced_linear_regression_AAPL_target_only_20250607_144243.pkl  enhanced_linear_regression_AAPL_target_only_20250607_144323.pkl  enhanced_linear_regression_AAPL_target_only_20250607_150028.pkl  enhanced_linear_regression_AAPL_with_peers_20250607_144356.pkl  enhanced_linear_regression_GOOG_target_only_20250607_150914.pkl  enhanced_linear_regression_MSFT_target_only_20250607_124654.pkl  enhanced_linear_regression_MSFT_target_only_20250607_143441.pkl  enhanced_linear_regression_MSFT_with_peers_20250607_124721.pkl  enhanced_linear_regression_NVDA_target_only_20250607_151038.pkl  improved_Lasso_MSFT_20250607_131449.pkl  linear_regression_MSFT_20250607_121118.pkl  linear_regression_MSFT_20250607_122818.pkl  linear_regression_model.pkl  lr_feature_scaler.pkl  lr_metrics.pkl  lr_model_info.pkl  lr_predict_function.py  lr_predictions.pkl  lr_rfe_selector.pkl  lr_selected_features.pkl  lr_target_scaler.pkl
notebooks/: cross_asset_modeling.ipynb  feature_engineering.ipynb  strategy.ipynb
notes/: pickup notes.md  to-do.md
scripts/: analyze_model.py  analyze_model_new.py  backtest_strategy.py  collect_price_data.py  identify_failed_symbols.py  initialize_database.py  make_predictions.py  monitor_database.py  replace_with_screener_symbols.py  setup_nltk.py  sync_symbol_universe.py  train_enhanced_model.py  train_model.py
src/: alpaca_data_loader.py  data_loader.py  model.py  news_analyzer.py  predict.py
src/features/: __init__.py  (+6 more)
tests/: test_sentiment.py
workflows/: @echo off.bat  data_pipeline.bat  enhanced_pipeline.bat
(+99 files in other folders)
